--- a/Modulo-03/ex023/tabela002.html
+++ b/Modulo-03/ex023/tabela002.html
@@ -19,6 +19,13 @@
             border-collapse: collapse;
             width: 500px;
         }
+        
+        caption {
+            font: bold 1.3em 'Courier New', Courier, monospace;
+            background-color: lightgrey;
+            padding: 5px 0px;
+
+        }
 
         tr, th, td {
             border: 1px solid black;
@@ -38,12 +45,26 @@
 </head>
 <body>
     <h1>Tabela Maior</h1>
+
+    <!--
+        ANATOMIA PARA TABELAS GRANDES
+        TABLE
+            CAPTION (seria uma legenda)
+            THEAD
+                TR,TD,TH
+            TBODY
+                TR,TD,TH
+            TFOOT
+                TR,TD,TH
+    -->
+
    <table>
+        <caption>População das Unidades Federativas</caption>
        <thead>
         <tr>
-            <th>Posição</th>
-            <th>Estados</th>
-            <th>População</th>
+            <th scope="col">Posição</th>
+            <th scope="col">Estados</th>
+            <th scope="col">População</th>
         </tr>
        </thead>
        <tbody>
@@ -100,9 +121,9 @@
         </tbody>
         <tfoot>
             <tr>
-                <th>Total de População</th>
+                <th scope="row" style="width: 100px;">Total de Habitantes</th>
                 <td>-</td>
-                <td class="num"><strong>143.083.135</strong></td>
+                <td class="num" style="width: 100px;"><strong>143.083.135</strong></td>
             </tr>
         </tfoot>
    </table> 
