--- a/Modulo-03/ex023/tabela002.html
+++ b/Modulo-03/ex023/tabela002.html
@@ -27,6 +27,14 @@
 
         }
 
+        tbody > tr:nth-child(even) {  /*-- PAR --*/
+            background-color: lightskyblue;
+        }
+
+        tbody > tr:nth-child(odd) {   /*-- IMPAR --*/
+            background-color: lightslategray;
+        }
+
         tr, th, td {
             border: 1px solid black;
             text-align: center;
