--- a/Modulo-03/ex023/tabela002.html
+++ b/Modulo-03/ex023/tabela002.html
@@ -136,8 +136,7 @@
         </tbody>
         <tfoot>
             <tr>
-                <th scope="row" style="width: 100px;">Total de Habitantes</th>
-                <td>-</td>
+                <th colspan="2" scope="row" style="width: 100px;">Total de Habitantes</th>
                 <td class="num" style="width: 100px;"><strong>143.083.135</strong></td>
             </tr>
         </tfoot>
