--- a/Modulo-03/ex023/desafio-2a.html
+++ b/Modulo-03/ex023/desafio-2a.html
@@ -5,11 +5,102 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Desafio - 2a</title>
+    <style>
+        body {
+            font-family: Arial, Helvetica, sans-serif;
+        }
+        
+        table {
+            width: 500px;
+            border-collapse: collapse;
+        }
+
+        th, tr, td {
+            border: 1px solid black;
+            padding: 10px;
+            text-align: center;
+        }
+        
+        thead {
+            background-color: gray;
+            color: white;
+        }
+
+        .meio {
+            background-color: gray;
+            color: white;
+            text-align: left;
+        }
+
+        .num {
+            background-color: gray;
+            color: white;
+        }
+    </style>
 </head>
 <body>
     <h1>Segundo Desafio</h1>
     <table>
-
+        <thead>
+            <tr>
+                <th scope="col" rowspan="2">Área</th>
+                <th scope="colgroup" rowspan="2">Disciplinas</th>
+                <th scope="rowgroup" colspan="2">Notas</th>
+                <th scope="colgroup" rowspan="2">Média</th>
+            </tr>
+            <tr>
+                <th scope="col" >Nota 1</th>
+                <th scope="col" >Nota 2</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <th scope="rowgroup" rowspan="4">Exatas</th>
+                <td>Matemática</td>
+                <td>0.0</td>
+                <td>0.0</td>
+                <td>0.0</td>
+            </tr>
+            <tr>
+                <td>Física</td>
+                <td>0.0</td>
+                <td>0.0</td>
+                <td>0.0</td>
+            </tr>
+            <tr>
+                <td>Química</td>
+                <td>0.0</td>
+                <td>0.0</td>
+                <td>0.0</td>
+            </tr>
+            <tr>
+                <td>Biologia</td>
+                <td>0.0</td>
+                <td>0.0</td>
+                <td>0.0</td>
+            </tr>
+            <tr>
+                <th scope="row" class="meio" colspan="4">Média de Exatas</th>
+                <td class="num"><strong>0.0</strong></td>
+            </tr>
+            <tr>
+                <th scope="rowgroup" rowspan="2">Humanas</th>
+                <td>História</td>
+                <td>0.0</td>
+                <td>0.0</td>
+                <td>0.0</td>
+            </tr>
+            <tr>
+                <td>Geografia</td>
+                <td>0.0</td>
+                <td>0.0</td>
+                <td>0.0</td>
+            </tr>
+            <tr>
+                <th scope="row" class="meio" colspan="4">Média de Humanas</th>
+                <td class="num"><strong>0.0</strong></td>
+            </tr>
+        </tbody>
     </table>
 </body>
 </html>
