--- a/Modulo-03/ex023/desafio-2a.html
+++ b/Modulo-03/ex023/desafio-2a.html
@@ -44,9 +44,9 @@
         <thead>
             <tr>
                 <th scope="col" rowspan="2">Área</th>
-                <th scope="colgroup" rowspan="2">Disciplinas</th>
-                <th scope="rowgroup" colspan="2">Notas</th>
-                <th scope="colgroup" rowspan="2">Média</th>
+                <th scope="col" rowspan="2">Disciplinas</th>
+                <th scope="colgroup" colspan="2">Notas</th>
+                <th scope="col" rowspan="2">Média</th>
             </tr>
             <tr>
                 <th scope="col" >Nota 1</th>
