--- a/Modulo-04/ex024/iframe001.html
+++ b/Modulo-04/ex024/iframe001.html
@@ -5,15 +5,36 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>primeiro iframe</title>
+    <style>
+        iframe {
+            width: 400px;
+            height: 400px;
+        }
+    </style>
 </head>
 <body>
     <h1>testanto meu primeiro iframe</h1>
+
+    <!--Tamanho padrão de 300x150-->
     <p>
         Acesse o 
 
-        <iframe src="https://www.cursoemvideo.com" frameborder="0"></iframe>
-
+        <iframe src="https://www.cursoemvideo.com" frameborder="0" scrolling="no">
+            <!--Caso o navegador não reconheça o frame aparecerá o link abaixo-->
+            <a href="https://www.cursoemvideo.com">Curso em Video</a>
+        </iframe>
+        
         e saiba mais!
+    </p>
+
+    <p>
+        Acesse o 
+
+        <iframe src="https://outlook.live.com" frameborder="0">
+            <a href="https://outlook.live.com/">Outlook</a>
+        </iframe>
+        
+        para saber mais!
     </p>
 </body>
 </html>
