--- a/Modulo-04/ex024/iframe002.html
+++ b/Modulo-04/ex024/iframe002.html
@@ -12,13 +12,20 @@
             margin: auto;
             display: block;
         }
+
+        .erro {
+            font-family: 'Courier New', Courier, monospace;
+            font-size: 1.3em;
+        }
     </style>
 </head>
 <body>
     <h1>Testanto Iframe Local</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae optio quam totam eaque doloremque consectetur? Earum, unde voluptates. Dolorum aspernatur minima repellat asperiores quidem rerum mollitia veniam. Nihil, ut pariatur! Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi ratione totam corporis rem soluta id quibusdam quis omnis nulla laborum voluptate beatae cupiditate inventore magni deserunt quaerat, vel suscipit explicabo!</p>
 
-    <iframe src="./iframe002pag01.html" frameborder="0" scrolling="auto"></iframe>
+    <iframe src="./iframe002pag01.html" frameborder="0" scrolling="auto">
+        <p class="erro">Não foi possivel carregar o conteúdo...</p>
+    </iframe>
 
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Alias laborum fugiat quae dolore facilis assumenda! Mollitia velit fuga veritatis repellendus iste nam reiciendis, asperiores eum quas, odio, maxime quidem perferendis? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla, assumenda. Veritatis pariatur repellat blanditiis culpa possimus aliquam explicabo libero, animi fugit tempora sed voluptatem ullam porro dolorum distinctio quasi quas.</p> 
 </body>
