atualização do iframe002

--- a/Modulo-04/ex024/iframe002.html
+++ b/Modulo-04/ex024/iframe002.html
@@ -23,7 +23,7 @@
     <h1>Testanto Iframe Local</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae optio quam totam eaque doloremque consectetur? Earum, unde voluptates. Dolorum aspernatur minima repellat asperiores quidem rerum mollitia veniam. Nihil, ut pariatur! Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi ratione totam corporis rem soluta id quibusdam quis omnis nulla laborum voluptate beatae cupiditate inventore magni deserunt quaerat, vel suscipit explicabo!</p>
 
-    <iframe src="./iframe002pag01.html" frameborder="0" scrolling="auto">
+    <iframe src="paginas-extras/iframe002pag01.html" frameborder="0" scrolling="auto">
         <p class="erro">Não foi possivel carregar o conteúdo...</p>
     </iframe>
 
