--- a/Modulo-04/ex024/paginas-extras/pag03.html
+++ b/Modulo-04/ex024/paginas-extras/pag03.html
@@ -24,6 +24,6 @@
 <body>
     <h1>Teste da Página 03 </h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis sit ullam corporis itaque obcaecati dicta minus nihil, deleniti impedit nulla corrupti, excepturi eaque molestias, ipsum ea laboriosam fugiat adipisci accusamus? Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid ea rem iusto eius quis nesciunt blanditiis est atque cum tempore laudantium quaerat cupiditate, asperiores laboriosam aut velit ullam expedita ratione.</p>
-    <img src="../paginas-extras/Photo-Logo-PNG.png" alt="Photoshop">
+    <img src="../paginas-extras/Photo-Logo-PNG.png" alt="logo-Photoshop">
 </body>
 </html>
