--- a/Modulo-04/ex024/iframe003.html
+++ b/Modulo-04/ex024/iframe003.html
@@ -12,6 +12,9 @@
             border: 2px dashed black;
         }
 
+        .principal {
+            text-align: center;
+        }
     </style>
 </head>
 <body>
@@ -23,8 +26,8 @@
     </ul>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Totam, doloribus odio exercitationem deserunt minus tempora ut dicta? Esse amet debitis tempore dolor unde, veritatis, placeat quos voluptates rem ipsum sed. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt voluptates corporis quos quidem. Quis obcaecati similique ab eos sed rerum mollitia nesciunt assumenda, vel at vitae labore excepturi? Tempora, voluptates!</p>
 
-    <iframe name="frame" src="">
-        <p>Seu navegador talvez não seja compativel...</p>
+    <iframe name="frame" srcdoc="<h1>Escolha uma das Páginas Acima</h1><img src='imagens/Monster-300.jpg'>">
+        <p>Seu navegador talvez não seja compatível...</p>
     </iframe>
 
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reprehenderit est, tenetur consequuntur veritatis necessitatibus recusandae iure harum magnam temporibus eos magni assumenda repellendus incidunt perferendis nesciunt adipisci illo eveniet autem. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quod, debitis maiores, ad ut quasi voluptatum eveniet iure quo officia ea necessitatibus nemo reiciendis assumenda iusto. Magnam incidunt similique obcaecati eius.</p>
