--- a/Modulo-04/ex025/form004.html
+++ b/Modulo-04/ex025/form004.html
@@ -7,6 +7,30 @@
     <title>Formulário</title>
 </head>
 <body>
-    
+    <h1>Testanto Formulário</h1>
+    <form action="cadastro.php" method="get" autocomplete="on">
+        <fieldset style="width: 500px;">
+            <legend>Dados Pessoais</legend>
+            <p>
+                <label for="inome">Nome:</label>
+                <input type="text" name="name" id="inome" minlength="5" maxlength="20" autocomplete="name" required placeholder="Digite seu nome">
+            </p>
+            <p>
+                <label for="iemail">Email</label>
+                <input type="email" name="email" id="iemail" autocomplete="email" required
+                placeholder="Digite seu email">
+            </p>
+            <p>
+                <label for="itel">Telefone</label>
+                <input type="tel" name="name" id="itel" autocomplete="tel" required
+                pattern="^\(\d{2}\)\d{4,5}-\d{4}$" placeholder="(xx)xxxx-xxxx">
+                <!--Estudar sobre RegEx mais pra frente-->
+            </p>
+            <p>
+                <input type="submit" value="Enviar">
+                <input type="reset" value="Limpar">
+            </p>
+        </fieldset>
+    </form>
 </body>
 </html>
