--- a/Modulo-04/ex026/mq004/index.html
+++ b/Modulo-04/ex026/mq004/index.html
@@ -4,9 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="estilos/style.css" media="all">
+    <link rel="stylesheet" href="estilos/media-queries.css">
     <title>Media Query</title>
 </head>
 <body>
-    
+    <main>
+        <h1>Testando Media Queries</h1>
+        <img id="pc" src="imagens/icon-pc.png" alt="Media PC">
+        <img id="phone" src="imagens/icon-phone.png" alt="Media Celular">
+        <img id="print" src="imagens/icon-print.png" alt="Media Impressora">
+        <img id="tablet" src="imagens/icon-tablet.png" alt="Media Tablet">
+        <img id="tv" src="imagens/icon-tv.png" alt="Media TV">
+    </main>
 </body>
 </html>
