--- a/Modulo-04/ex026/mq005/index.html
+++ b/Modulo-04/ex026/mq005/index.html
@@ -6,11 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Media Query</title>
     <link rel="stylesheet" href="estilos/style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"/>
 </head>
 <body>
     <header>
         <h1>Meu Site</h1>
-        <nav>
+        <span id="burguer" class="material-symbols-outlined" onclick="clickMenu()">menu</span>
+        <nav class="itens">
             <ul>
                 <li><a href="#">Opção 01</a></li>
                 <li><a href="#">Opção 02</a></li>
@@ -31,5 +33,14 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi assumenda dicta labore quia modi consequuntur molestiae asperiores exercitationem. Odio voluptates quia ducimus incidunt nisi voluptate. Sit ex amet reiciendis accusantium! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eum sunt odit deleniti quas quasi earum iure sequi autem voluptates veniam exercitationem sint error ducimus, vel voluptatem atque commodi nulla beatae.</p>
         </article>
     </main>
+    <script>
+        function clickMenu () {
+            if (itens.style.display == 'block') {
+                itens.style.display = 'none'
+            } else {
+                itens.style.display = 'block'
+            }
+        }
+    </script>
 </body>
 </html>
