--- a/Modulo-04/ex026/mq005/index.html
+++ b/Modulo-04/ex026/mq005/index.html
@@ -12,7 +12,7 @@
     <header>
         <h1>Meu Site</h1>
         <span id="burguer" class="material-symbols-outlined" onclick="clickMenu()">menu</span>
-        <nav class="itens">
+        <nav id="itens">
             <ul>
                 <li><a href="#">Opção 01</a></li>
                 <li><a href="#">Opção 02</a></li>
@@ -34,7 +34,7 @@
         </article>
     </main>
     <script>
-        function clickMenu () {
+        function clickMenu() {
             if (itens.style.display == 'block') {
                 itens.style.display = 'none'
             } else {
