atualização do projeto

--- a/Desenvolvimento-Web/projeto-01/index.html
+++ b/Desenvolvimento-Web/projeto-01/index.html
@@ -4,9 +4,33 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>projeto-01</title>
+    <link rel="stylesheet" href="estilos/style.css">
+    <title>UNES - Página principal</title>
 </head>
 <body>
-
+    <header>
+        <img src="imagens/logo.png" alt="Logo-UNES">
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="quem-somos.html">Quem Somos</a></li>
+                <li><a href="#">Contato</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section>
+            <img src="imagens/capa.png" alt="UNES-Capa">
+            <article>
+                <h1>Sobre a Universidade</h1>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque alias explicabo magnam voluptatem, accusantium ea odio impedit maxime quae dolores dolor ratione iusto, a dolorem iure at rerum officiis quibusdam! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Porro maiores autem aspernatur? Nam nobis architecto sint debitis voluptates et dolor facilis cum, saepe nihil facere nisi distinctio quod aspernatur ratione?</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur, amet voluptate? Qui atque reprehenderit nulla. Culpa voluptate magni dolore deserunt? Impedit maxime, assumenda ab unde eum enim odio quo veritatis. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis quos assumenda accusantium modi beatae, eveniet nemo, maxime eos corporis voluptates, deserunt illum quibusdam rerum alias quisquam quod fugit reprehenderit error!</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium quae amet laudantium magni labore quam consequuntur, quo nulla delectus libero aliquid debitis, similique vitae dolorum obcaecati veniam ea harum. Suscipit. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsam architecto, laudantium est exercitationem, quasi nulla et ex at quas dolores similique. Ut expedita praesentium maiores ipsa blanditiis eum rem explicabo!</p>
+            </article>
+        </section>
+        <footer>
+            <p>Todos os direitos Reservados</p>
+        </footer>
+    </main>
 </body>
 </html>
