--- a/Desenvolvimento-Web/projeto-01/index.html
+++ b/Desenvolvimento-Web/projeto-01/index.html
@@ -13,7 +13,7 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="quem-somos.html">Quem Somos</a></li>
+                <li><a href="quem-somos.html" target="_blank">Quem Somos</a></li>
                 <li><a href="#">Contato</a></li>
             </ul>
         </nav>
