--- a/Desenvolvimento-Web/projeto-01/index.html
+++ b/Desenvolvimento-Web/projeto-01/index.html
@@ -14,7 +14,7 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="quem-somos.html" target="_blank">Quem Somos</a></li>
-                <li><a href="#">Contato</a></li>
+                <li><a href="contato.html" target="_blank">Contato</a></li>
             </ul>
         </nav>
     </header>
