--- a/Desenvolvimento-Web/projeto-02/index.html
+++ b/Desenvolvimento-Web/projeto-02/index.html
@@ -15,10 +15,10 @@
     </header>
     <nav>
         <ul>
-            <li><a href="#">HOME |</a></li>
-            <li><a href="#">BIOGRAFIA |</a></li>
-            <li><a href="#">CAMPANHAS PUBLICITÁRIAS |</a></li>
-            <li><a href="#">CONTATO</a></li>
+            <li><a href="index.html" target="_self">HOME |</a></li>
+            <li><a href="biografia.html" target="_blank">BIOGRAFIA |</a></li>
+            <li><a href="#" target="_blank">CAMPANHAS PUBLICITÁRIAS |</a></li>
+            <li><a href="#" target="_blank">CONTATO</a></li>
         </ul>
     </nav>
     <div class="container">
