projeto-02 básico - finalizado

--- a/Desenvolvimento-Web/projeto-02/biografia.html
+++ b/Desenvolvimento-Web/projeto-02/biografia.html
@@ -28,8 +28,8 @@
         <ul>
             <li><a href="index.html">HOME |</a></li>
             <li><a href="biografia.html" target="_self">BIOGRAFIA |</a></li>
-            <li><a href="#" target="_blank">CAMPANHAS PUBLICITÁRIAS |</a></li>
-            <li><a href="#" target="_blank">CONTATO</a></li>
+            <li><a href="campanha.html" target="_blank">CAMPANHAS PUBLICITÁRIAS |</a></li>
+            <li><a href="contato.html" target="_blank">CONTATO</a></li>
         </ul>
     </nav>
     <div class="container">
