--- a/Desenvolvimento-Web/projeto-03/index.html
+++ b/Desenvolvimento-Web/projeto-03/index.html
@@ -22,21 +22,45 @@
     </div>
     <div id="area-principal">
         <div id="area-postagens">
+
             <!--Abertura postagem-->
             <div class="postagens">
                 <h2>Titulo da postagem 1</h2>
-                <span>Postado 20 março 2022</span>
+                <span class="data-postagem">Postado 20 março 2022</span>
                 <img width="620px" src="imagens/imagem2.jpg" alt="postagem 1">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae ad delectus distinctio fugiat sit recusandae fugit saepe maxime accusantium. Enim iste ex veritatis aspernatur nihil quia nesciunt dolore nisi voluptate!</p>
                 <a href="#">Leia Mais</a>
             </div> <!--fechamento postagem-->
+
+            <div id="area-postagens">
+                <!--Abertura postagem-->
+                <div class="postagens">
+                    <h2>Titulo da postagem 2</h2>
+                    <span class="data-postagem">Postado 15 março 2022</span>
+                    <img width="620px" src="imagens/imagem1.jpg" alt="postagem 1">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae ad delectus distinctio fugiat sit recusandae fugit saepe maxime accusantium. Enim iste ex veritatis aspernatur nihil quia nesciunt dolore nisi voluptate!</p>
+                    <a href="#">Leia Mais</a>
+                </div> <!--fechamento postagem-->
         </div>
+    </div>
     <div id="area-lateral">
-        area lateral
+
+        <div class="conteudo-lateral">
+            <h3>Postagens recentes</h3>
+            <div class="postagem-lateral">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                <a href="#">Leia mais</a>
+            </div>
+
+            <div class="postagem-lateral" style="border: none;">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                <a href="#">Leia mais</a>
+            </div>
+        </div>
+
     </div>
-    <div id="rodape">
-        Todos os direitos Reservados
-    </div>
-    </div>
+        <div id="rodape">
+             Todos os direitos Reservados
+        </div>
 </body>
 </html>
