--- a/Desenvolvimento-Web/projeto-03/index.html
+++ b/Desenvolvimento-Web/projeto-03/index.html
@@ -59,6 +59,17 @@
         </div>
 
     </div>
+    
+    <div id="area-lateral">
+        <div class="conteudo-lateral">
+            <h3>Categorias</h3>
+            <a href="#">Jogos</a>               
+            <a href="#">Celulares</a>               
+            <a href="#">Informática</a>               
+            <a href="#">Eletrônicos</a>               
+        </div>
+    </div>
+
         <div id="rodape">
              Todos os direitos Reservados
         </div>
