--- a/Desenvolvimento-Web/ex05-lista-vertical/sobre.html
+++ b/Desenvolvimento-Web/ex05-lista-vertical/sobre.html
@@ -7,11 +7,11 @@
     <link rel="stylesheet" href="style.css">
     <title>Lista Vertical</title>
 </head>
-<body id="home">
-    <h1>Home</h1>
+<body id="sobre">
+    <h1>Sobre</h1>
     <ul id="navegacao">
         <li class="home"><a href="index.html">Home</a></li>
-        <li><a href="sobre.html">Sobre</a></li>
+        <li class="sobre"><a href="sobre.html">Sobre</a></li>
         <li><a href="#">História</a></li>
         <li><a href="#">Fale Conosco</a></li>
     </ul>
