att. ex08 - largura fixa

--- a/Desenvolvimento-Web/ex08-Largura-fixa/index.html
+++ b/Desenvolvimento-Web/ex08-Largura-fixa/index.html
@@ -8,6 +8,25 @@
     <title>Largura Fixa</title>
 </head>
 <body>
-    
+    <div id="container">
+        <div id="cabecalho">Cabeçalho</div>
+        <div id="conteudo">
+            <h1>Testando Título 1</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis pariatur iste, sapiente laudantium, aliquid aliquam esse modi exercitationem placeat asperiores necessitatibus dicta nesciunt repellat quam iure provident, sequi ad ducimus?</p>
+            <h1>Testando Título 2</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis pariatur iste, sapiente laudantium, aliquid aliquam esse modi exercitationem placeat asperiores necessitatibus dicta nesciunt repellat quam iure provident, sequi ad ducimus?</p>
+        </div>
+        <div id="navegacao">
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Notícias</a></li>
+                <li><a href="#">Novidades</a></li>
+                <li><a href="#">Sobre</a></li>
+                <li><a href="#">Saiba mais</a></li>
+                <li><a href="#">Fale conosco</a></li>
+            </ul>
+        </div>
+        <div id="rodape">Rodapé</div>
+    </div>
 </body>
 </html>
