--- a/Desenvolvimento-Web/ex08-Largura-fixa/index.html
+++ b/Desenvolvimento-Web/ex08-Largura-fixa/index.html
@@ -11,10 +11,14 @@
     <div id="container">
         <div id="cabecalho">Cabeçalho</div>
         <div id="conteudo">
-            <h1>Testando Título 1</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis pariatur iste, sapiente laudantium, aliquid aliquam esse modi exercitationem placeat asperiores necessitatibus dicta nesciunt repellat quam iure provident, sequi ad ducimus?</p>
-            <h1>Testando Título 2</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis pariatur iste, sapiente laudantium, aliquid aliquam esse modi exercitationem placeat asperiores necessitatibus dicta nesciunt repellat quam iure provident, sequi ad ducimus?</p>
+            <div id="conteudo1">
+                <h1>Testando Título 1</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis pariatur iste, sapiente laudantium, aliquid aliquam esse modi exercitationem placeat asperiores necessitatibus dicta nesciunt repellat quam iure provident, sequi ad ducimus?</p>
+            </div>
+            <div id="conteudo2">
+                <h2>Testando Título 2</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis pariatur iste, sapiente laudantium, aliquid aliquam esse modi exercitationem placeat asperiores necessitatibus dicta nesciunt repellat quam iure provident, sequi ad ducimus?</p>
+            </div>
         </div>
         <div id="navegacao">
             <ul>
