ex11 formulário avançado

--- a/Desenvolvimento-Web/ex11-formulario-avancado/index.html
+++ b/Desenvolvimento-Web/ex11-formulario-avancado/index.html
@@ -8,6 +8,20 @@
     <title>Formulário Avançado</title>
 </head>
 <body>
-    
+    <div id="container">
+        <img src="imagens/perfil.png" alt="Perfil">
+
+        <form action="get">
+            <div>
+                <input class="email" type="text" name="email" id="email" placeholder="Digite seu email" required>
+            </div>
+            <div>
+                <input class="senha" type="password" name="senha" id="senha" placeholder="Digite sua senha" required>
+            </div>
+            <div>
+                <input class="logar" type="submit" value="Logar">
+            </div>
+        </form>
+    </div>
 </body>
 </html>
