--- a/Desenvolvimento-Web/framework-boots-css/aula01-boots/index.html
+++ b/Desenvolvimento-Web/framework-boots-css/aula01-boots/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="../css/bootstrap.min.css">
+    <link rel="stylesheet" href="../bootstrap4/css/bootstrap.min.css">
 
-    <title>Bootstrap</title>
+    <title>Formatando Texto</title>
 </head>
 <body style="margin-bottom: 200px; padding: 16px;">
 
