--- a/Desenvolvimento-Web/framework-boots-css/aula09-barra-de-navegacao/index.html
+++ b/Desenvolvimento-Web/framework-boots-css/aula09-barra-de-navegacao/index.html
@@ -56,10 +56,181 @@
         </ul>
     </nav>
 
+    <br>
+    <br>
+
+    <h2>Barra de navegação com menu responsivo</h2>
+    <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+        <!-- Logo -->
+        <a href="#" class="navbar-brand">Chalé Hotel</a>
+
+        <!-- Menu Hamburguer -->
+        <button class="navbar-toggler" data-toggle="collapse" data-target="#nav-target">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <!-- Navegação -->
+        <div class="collapse navbar-collapse" id="nav-target">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Sobre</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Serviços</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+
+    <br>
+    <br>
+
+    <h2>Barra de navegação com formulário</h2>
+    <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+        <!-- logo -->
+        <a href="#" class="navbar-brand">Chalé Hotel</a>
+
+        <!-- Menu Hamburguer -->
+        <button class="navbar-toggler" data-toggle="collapse" data-target="#navegacao">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        
+        <!-- Navegação -->
+        <div class="collapse navbar-collapse" id="navegacao">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Sobre</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Serviços</a>
+                </li>
+            </ul>
+
+            <!-- Formulário -->
+            <form action="#" method="get" class="form-inline">
+                <input type="text" name="#" id="#" class="form-control" placeholder="Pesquisar...">
+                <button class="btn btn-outline-light">ok</button>
+            </form>
+        </div>
+    </nav>
+
+    <br>
+    <br>
+
+    <h2>Barra de navegção com menu Dropdown</h2>
+    <nav class="navbar navbar-expand-sm navbar-light bg-light">
+        <!-- Logo -->
+        <a href="#" class="navbar-brand">Chalé Hotel</a>
+
+        <!-- Menu Hamburguer -->
+        <button class="navbar-toggler" data-toggle="collapse" data-target="#navegar">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <!-- Navegação -->
+        <div class="collapse navbar-collapse" id="navegar">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Sobre</a>
+                </li>
+
+                <li class="nav-item dropdown">
+                    <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Serviços</a>
+
+                    <div class="dropdown-menu">
+                        <a href="#" class="dropdown-item">Serviços 1</a>
+                        <a href="#" class="dropdown-item">Serviços 2</a>
+                        <a href="#" class="dropdown-item">Serviços 3</a>
+                    </div>
+                </li>
+            </ul>
+        </div>
+    </nav>
+
+    <br>
+    <br>
+
+    <!-- Cores
+    Opções: bg-primary, bg-secondary, bg-success, bg-info, bg-warning
+            bg-danger, bg-light, bg-dark -->
+    <h2>Cores</h2>
+    <nav class="navbar navbar-expand-sm navbar-dark bg-primary">
+        <!-- Logo -->
+        <a href="#" class="navbar-brand">Chalé Hotel</a>
+
+        <!-- Navegação -->
+        <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+                <a href="#" class="nav-link">Home</a>
+            </li>
+            <li class="nav-item">
+                <a href="#" class="nav-link">Sobre</a>
+            </li>
+            <li class="nav-item">
+                <a href="#" class="nav-link">Serviços</a>
+            </li>
+        </ul>
+    </nav>
+
+    <br>
+    <br>
+
+    <!-- Alinhamentos
+    Opções: fixed-top, fixed-bottom, sticky -->
+    <h2>Alinhamentos</h2>
+    <nav class="navbar sticky-top navbar-expand-sm navbar-dark bg-info">
+        <!-- Logo -->
+        <a href="#" class="navbar-brand">Chalé Hotel</a>
+
+        <!-- Navegação -->
+        <ul class="navbar-nav ml-auto"> 
+            <li class="nav-item">
+                <a href="#" class="nav-link">Home</a>
+            </li>
+            <li class="nav-item">
+                <a href="#" class="nav-link">Sobre</a>
+            </li>
+            <li class="nav-item">
+                <a href="#" class="nav-link">Serviços</a>
+            </li>
+        </ul>
+    </nav>
+
+    <h1>Lorem ipsum dolor sit amet</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam ad, reprehenderit ipsam alias quisquam ducimus veritatis error odio iste! Laborum quisquam maiores recusandae similique. Voluptas voluptatibus reprehenderit esse eveniet corporis. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellat labore totam esse odio expedita officiis natus tempora, voluptatem at soluta laudantium error, fugiat itaque similique quasi, placeat exercitationem culpa tenetur.</p>
+
+    <h1>Lorem ipsum dolor sit amet</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam ad, reprehenderit ipsam alias quisquam ducimus veritatis error odio iste! Laborum quisquam maiores recusandae similique. Voluptas voluptatibus reprehenderit esse eveniet corporis. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellat labore totam esse odio expedita officiis natus tempora, voluptatem at soluta laudantium error, fugiat itaque similique quasi, placeat exercitationem culpa tenetur.</p>
+
+    <h1>Lorem ipsum dolor sit amet</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam ad, reprehenderit ipsam alias quisquam ducimus veritatis error odio iste! Laborum quisquam maiores recusandae similique. Voluptas voluptatibus reprehenderit esse eveniet corporis. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellat labore totam esse odio expedita officiis natus tempora, voluptatem at soluta laudantium error, fugiat itaque similique quasi, placeat exercitationem culpa tenetur.</p>
+
+    <h1>Lorem ipsum dolor sit amet</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam ad, reprehenderit ipsam alias quisquam ducimus veritatis error odio iste! Laborum quisquam maiores recusandae similique. Voluptas voluptatibus reprehenderit esse eveniet corporis. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellat labore totam esse odio expedita officiis natus tempora, voluptatem at soluta laudantium error, fugiat itaque similique quasi, placeat exercitationem culpa tenetur.</p>
+
+    <h1>Lorem ipsum dolor sit amet</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam ad, reprehenderit ipsam alias quisquam ducimus veritatis error odio iste! Laborum quisquam maiores recusandae similique. Voluptas voluptatibus reprehenderit esse eveniet corporis. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellat labore totam esse odio expedita officiis natus tempora, voluptatem at soluta laudantium error, fugiat itaque similique quasi, placeat exercitationem culpa tenetur.</p>
+
+    <h1>Lorem ipsum dolor sit amet</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam ad, reprehenderit ipsam alias quisquam ducimus veritatis error odio iste! Laborum quisquam maiores recusandae similique. Voluptas voluptatibus reprehenderit esse eveniet corporis. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellat labore totam esse odio expedita officiis natus tempora, voluptatem at soluta laudantium error, fugiat itaque similique quasi, placeat exercitationem culpa tenetur.</p>
+
+    <h1>Lorem ipsum dolor sit amet</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam ad, reprehenderit ipsam alias quisquam ducimus veritatis error odio iste! Laborum quisquam maiores recusandae similique. Voluptas voluptatibus reprehenderit esse eveniet corporis. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellat labore totam esse odio expedita officiis natus tempora, voluptatem at soluta laudantium error, fugiat itaque similique quasi, placeat exercitationem culpa tenetur.</p>
+
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <script src="../bootstrap4/js/bootstrap.min.js"></script>
 </body>
 </html>
