--- a/Desenvolvimento-Web/framework-boots-css/aula14-tabelas-paginacao/index.html
+++ b/Desenvolvimento-Web/framework-boots-css/aula14-tabelas-paginacao/index.html
@@ -250,7 +250,86 @@
     </div>
     <br>
 
-    <h2>Paginação: pagination, page-item, page-item, page-link-active, disabled</h2>
+    <h2>Paginação: pagination, page-item, page-item, page-link, active, disabled</h2>
+    <nav>
+        <ul class="pagination">
+            <li class="page-item disabled">
+                <a class="page-link" href="#">Anterior</a>
+            </li>
+            <li class="page-item active">
+                <a class="page-link" href="#">1</a>
+            </li>
+            <li class="page-item">
+                <a class="page-link" href="#">2</a>
+            </li>
+            <li class="page-item">
+                <a class="page-link" href="#">Próximo</a>
+            </li>
+        </ul>
+    </nav>
+    <br>
+
+    <h2>Alinhamento: justify-content-(center, end)</h2>
+    <nav>
+        <ul class="pagination justify-content-end">
+            <li class="page-item disabled">
+                <a class="page-link" href="#">Anterior</a>
+            </li>
+            <li class="page-item active">
+                <a class="page-link" href="#">1</a>
+            </li>
+            <li class="page-item">
+                <a class="page-link" href="#">2</a>
+            </li>
+            <li class="page-item">
+                <a class="page-link" href="#">Próximo</a>
+            </li>
+        </ul>
+    </nav>
+    <br>
+
+    <h2>Tamanho: pagination-(sm,lg)</h2>
+    <nav>
+        <ul class="pagination justify-content-center pagination-lg">
+            <li class="page-item disabled">
+                <a class="page-link" href="#">Anterior</a>
+            </li>
+            <li class="page-item active">
+                <a class="page-link" href="#">1</a>
+            </li>
+            <li class="page-item">
+                <a class="page-link" href="#">2</a>
+            </li>
+            <li class="page-item">
+                <a class="page-link" href="#">Próximo</a>
+            </li>
+        </ul>
+    </nav>
+    <br>
+
+    <h2>Setas</h2>
+    <nav>
+        <ul class="pagination pagination-sm">
+            <li class="page-item disabled">
+                <a class="page-link" href="#">
+                    <span>&laquo;</span>
+                    <span class="sr-only">Anterior</span> <!-- sr-only é usado para leitores de tela -->
+                </a>
+            </li>
+            <li class="page-item">
+                <a class="page-link" href="#">1</a>
+            </li>
+            <li class="page-item">
+                <a class="page-link" href="#">2</a>
+            </li>
+            <li class="page-item active">
+                <a class="page-link" href="#">
+                    <span>&raquo;</span>
+                    <span class="sr-only">Próximo</span>  <!-- sr-only é usado para leitores de tela -->
+                </a>
+            </li>
+        </ul>
+    </nav>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
