--- a/Desenvolvimento-Web/framework-boots-css/projeto-01-boots/index.html
+++ b/Desenvolvimento-Web/framework-boots-css/projeto-01-boots/index.html
@@ -34,7 +34,7 @@
                             <a href="#" class="nav-link">Benefícios</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link">Preço</a>
+                            <a href="#" class="nav-link">Preços</a>
                         </li>
                         <li class="nav-item">
                             <a href="#" class="btn btn-outline-light ml-4">Entrar</a>
@@ -79,7 +79,89 @@
             </div>
         </div>
     </section> <!-- /Fim seção home -->
-    
+        
+    <section class="caixa"> <!-- Início seção saiba -->
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 d-flex">
+                    <div class="align-self-center">
+                        <h2>Saiba para onde vai o seu dinheiro</h2>
+                        <p>Manter as contas em dia é sempre um problema? O Finans avisa você: receba alertas de contas a pagar e a receber</p>
+                        <a href="#" class="btn btn-primary">Veja mais</a>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <img src="./img/saiba.png" alt="saiba mais" class="img-fluid" style="margin-top: 20px;">
+                </div>
+            </div>
+        </div>
+    </section> <!-- /Fim seção saiba -->
+
+    <section class="caixa"> <!-- Início seção juros -->
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <img src="./img/juros.png" alt="taxa de juros" class="img-fluid">
+                </div>
+                <div class="col-md-6 d-flex">
+                    <div class="align-self-center">
+                        <h2>Pare de pagar juros e economize</h2>
+                        <p>Com o Finans, você categoriza todos os seus lançamentos. Com gráficos simples, você sabe onde vem e para onde vai o seu dinheiro.</p>
+                        <a href="#" class="btn btn-primary">Veja mais</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section> <!-- /Fim seção juros -->
+
+    <section class="caixa"> <!-- Início seção recursos -->
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <img src="./img/facil.png" alt="facil de usar" class="img-fluid mt-1">
+                    <h4>Fácil de usar</h4>
+                    <p>O Finans vai além do básico e permite que você faça controles incríveis, essenciais para suas finanças. Simples como tem que ser!</p>
+                </div>
+                <div class="col-md-4">
+                    <img src="./img/economize.png" alt="economize seu dinheiro" class="img-fluid mt-1">
+                    <h4>Economize seu tempo</h4>
+                    <p>Tempo é dinheiro! Em segundos, você tem tudo sob controle e aproveite seu tempo com o que realmente importa para você!</p>
+                </div>
+                <div class="col-md-4">
+                    <img src="./img/suporte.png" alt="suporte amigo" class="img-fluid mt-1">
+                    <h4>Suporte amigos</h4>
+                    <p>Dúvidas? Perguntas? Nosso suporte super legal ajuda você! A gente tá aqui pra resolver seus problemas e deixar sua vida bem mais fácil!</p>
+                </div>
+            </div>
+        </div>
+    </section> <!-- /Fim seção recursos -->
+
+    <footer class="mt-4 mb-4">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-8">
+                    <p>
+                        <a href="#">Home</a>
+                        <a href="#">Recursos</a>
+                        <a href="#">Benefícios</a>
+                        <a href="#">Preços</a>
+                    </p>
+                </div>
+                <div class="col-md-4 d-flex justify-content-end">
+                    <a href="#" class="btn btn-outline-dark">
+                        <i class="fa-brands fa-twitter"></i>
+                    </a>
+                    <a href="#" class="btn btn-outline-dark ml-2">
+                        <i class="fa-brands fa-square-facebook"></i>
+                    </a>
+                    <a href="#" class="btn btn-outline-dark ml-2">
+                        <i class="fa-brands fa-square-instagram"></i>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </footer>
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
