--- a/Desenvolvimento-Web/framework-boots-css/projeto-01-boots/index.html
+++ b/Desenvolvimento-Web/framework-boots-css/projeto-01-boots/index.html
@@ -50,7 +50,7 @@
             <div class="row">
                 <div class="col-md-6 d-flex"> <!-- Textos da seção -->
                     <div class="align-self-center">
-                        <h1 class="display-4">Suas contas, descomplicadas</h1>
+                        <h1 class="display-5 mb-3">Suas contas, descomplicadas</h1>
                         <p>Usado por mais de 1 milhão de pessoas, o finans é uma ferramenta online que vai facilitar sua vida financeira.</p>
                         <form action="#" method="get" class="mt-4 mb-4">
                             <div class="input-group input-group-lg">
