projeto 02 - spotify finalizado

--- a/Desenvolvimento-Web/framework-boots-css/projeto-02-spotify/index.html
+++ b/Desenvolvimento-Web/framework-boots-css/projeto-02-spotify/index.html
@@ -123,6 +123,53 @@
             </div>
         </div>
     </section> <!-- /Fim estrutura conteúdos coluna 2 -->
+    <footer> <!-- Início rodapé -->
+        <div class="container">
+            <div class="row">
+                <div class="col-md-2">
+                    <img src="./imagens/spotify.svg" alt="logo spotify" width="142">
+                </div>
+                <div class="col-md-2">
+                    <h4>company</h4>
+                    <ul class="navbar-nav">
+                        <li><a href="#">Sobre</a></li>
+                        <li><a href="#">Empregos</a></li>
+                        <li><a href="#">Imprensa</a></li>
+                        <li><a href="#">Novidades</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-2">
+                    <h4>comunidades</h4>
+                    <ul class="navbar-nav">
+                        <li><a href="#">Artistas</a></li>
+                        <li><a href="#">Desenvolvedores</a></li>
+                        <li><a href="#">Marcas</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-2">
+                    <h4>comunicações</h4>
+                    <ul class="navbar-nav">
+                        <li><a href="#">Ajuda</a></li>
+                        <li><a href="#">Presentes</a></li>
+                        <li><a href="#">Player da web</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-4">
+                    <ul class="">
+                        <li>
+                            <a href="#" class="btn btn-light"><i class="fa-brands fa-twitter"></i></a>
+                        </li>
+                        <li>
+                            <a href="#" class="btn btn-light"><i class="fa-brands fa-square-facebook"></i></a>
+                        </li>
+                        <li>
+                            <a href="#" class="btn btn-light"><i class="fa-brands fa-square-instagram"></i></a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer> <!-- /Fim rodapé -->
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
